@@ -3,7 +3,6 @@ package de.bwaldvogel.mongo.backend;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.LinkedHashSet;
 import java.util.List;
@@ -19,25 +18,25 @@ public class CollectionUtilsTest {
 
     @Test
     void testGetSingleElement() throws Exception {
-        assertThat(CollectionUtils.getSingleElement(Collections.singletonList(1))).isEqualTo(1);
+        assertThat(CollectionUtils.getSingleElement(List.of(1))).isEqualTo(1);
 
         assertThatExceptionOfType(IllegalArgumentException.class)
             .isThrownBy(() -> CollectionUtils.getSingleElement(Collections.emptyList()))
             .withMessage("Expected one element but got zero");
 
         assertThatExceptionOfType(IllegalArgumentException.class)
-            .isThrownBy(() -> CollectionUtils.getSingleElement(Arrays.asList(1, 2)))
+            .isThrownBy(() -> CollectionUtils.getSingleElement(List.of(1, 2)))
             .withMessage("Expected one element but got at least two");
 
         assertThatExceptionOfType(IllegalArgumentException.class)
-            .isThrownBy(() -> CollectionUtils.getSingleElement(Arrays.asList(1, 2, 3)))
+            .isThrownBy(() -> CollectionUtils.getSingleElement(List.of(1, 2, 3)))
             .withMessage("Expected one element but got at least two");
     }
 
     @Test
     void testGetLastElement() throws Exception {
-        assertThat(CollectionUtils.getLastElement(Collections.singletonList(1))).isEqualTo(1);
-        assertThat(CollectionUtils.getLastElement(Arrays.asList(1, 2, 3))).isEqualTo(3);
+        assertThat(CollectionUtils.getLastElement(List.of(1))).isEqualTo(1);
+        assertThat(CollectionUtils.getLastElement(List.of(1, 2, 3))).isEqualTo(3);
 
         assertThatExceptionOfType(IllegalArgumentException.class)
             .isThrownBy(() -> CollectionUtils.getLastElement(Collections.emptyList()))
@@ -48,56 +47,56 @@ public class CollectionUtilsTest {
     void testGetSingleElement_exceptionSupplier() throws Exception {
         Supplier<RuntimeException> exceptionSupplier = () -> new MongoServerException("too many elements");
 
-        assertThat(CollectionUtils.getSingleElement(Collections.singletonList(1), exceptionSupplier)).isEqualTo(1);
+        assertThat(CollectionUtils.getSingleElement(List.of(1), exceptionSupplier)).isEqualTo(1);
 
         assertThatExceptionOfType(MongoServerException.class)
             .isThrownBy(() -> CollectionUtils.getSingleElement(Collections.emptyList(), exceptionSupplier))
             .withMessage("too many elements");
 
         assertThatExceptionOfType(MongoServerException.class)
-            .isThrownBy(() -> CollectionUtils.getSingleElement(Arrays.asList(1, 2), exceptionSupplier))
+            .isThrownBy(() -> CollectionUtils.getSingleElement(List.of(1, 2), exceptionSupplier))
             .withMessage("too many elements");
     }
 
     @Test
     void testMultiplyWithOtherElements() throws Exception {
-        List<Object> values = Arrays.asList(1, 2);
-        List<Object> collection = Arrays.asList("abc", "def", values);
+        List<Object> values = List.of(1, 2);
+        List<Object> collection = List.of("abc", "def", values);
 
-        assertThat(CollectionUtils.multiplyWithOtherElements(collection, Arrays.asList(values)))
+        assertThat(CollectionUtils.multiplyWithOtherElements(collection, List.of(values)))
             .containsExactly(
-                Arrays.asList("abc", "def", 1),
-                Arrays.asList("abc", "def", 2)
+                List.of("abc", "def", 1),
+                List.of("abc", "def", 2)
             );
 
         assertThatExceptionOfType(IllegalArgumentException.class)
-            .isThrownBy(() -> CollectionUtils.multiplyWithOtherElements(collection, Arrays.asList(Arrays.asList(1, 2, 3))))
+            .isThrownBy(() -> CollectionUtils.multiplyWithOtherElements(collection, List.of(List.of(1, 2, 3))))
             .withMessage("Expected [1, 2, 3] to be part of [abc, def, [1, 2]]");
 
-        List<Object> first = Arrays.asList("abc", "xyz", Arrays.asList("L", "M", "S"), Arrays.asList("red", "green", "blue"));
-        List<List<Object>> second = Arrays.asList(Arrays.asList("L", "M", "S"), Arrays.asList("red", "green", "blue"));
+        List<Object> first = List.of("abc", "xyz", List.of("L", "M", "S"), List.of("red", "green", "blue"));
+        List<List<Object>> second = List.of(List.of("L", "M", "S"), List.of("red", "green", "blue"));
         assertThat(CollectionUtils.multiplyWithOtherElements(first, second))
             .containsExactly(
-                Arrays.asList("abc", "xyz", "L", "red"),
-                Arrays.asList("abc", "xyz", "M", "green"),
-                Arrays.asList("abc", "xyz", "S", "blue")
+                List.of("abc", "xyz", "L", "red"),
+                List.of("abc", "xyz", "M", "green"),
+                List.of("abc", "xyz", "S", "blue")
             );
     }
 
     @Test
     void testMultiplyWithOtherElementsWrongSize() throws Exception {
-        List<Object> smallValues = Arrays.asList(1, 2);
-        List<Object> bigValues = Arrays.asList(1, 2, 3);
-        List<Object> collection = Arrays.asList("abc", "def", smallValues, bigValues);
+        List<Object> smallValues = List.of(1, 2);
+        List<Object> bigValues = List.of(1, 2, 3);
+        List<Object> collection = List.of("abc", "def", smallValues, bigValues);
 
         assertThatExceptionOfType(IllegalArgumentException.class)
-            .isThrownBy(() -> CollectionUtils.multiplyWithOtherElements(collection, Arrays.asList(smallValues, bigValues)))
+            .isThrownBy(() -> CollectionUtils.multiplyWithOtherElements(collection, List.of(smallValues, bigValues)))
             .withMessage("Expected [1, 2, 3] to be size 2");
     }
 
     @Test
     void testGetElementAtPosition_list() throws Exception {
-        List<String> list = Arrays.asList("a", "b", "c");
+        List<String> list = List.of("a", "b", "c");
         assertThat(CollectionUtils.getElementAtPosition(list, 0)).isEqualTo("a");
         assertThat(CollectionUtils.getElementAtPosition(list, 1)).isEqualTo("b");
         assertThat(CollectionUtils.getElementAtPosition(list, 2)).isEqualTo("c");
