@@ -4,10 +4,10 @@ import static de.bwaldvogel.mongo.TestUtils.json;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.entry;
 
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.LinkedHashSet;
+import java.util.List;
 import java.util.Map;
 
 import org.junit.jupiter.api.Test;
@@ -54,7 +54,7 @@ class DocumentTest {
     void testCloneDeeply() throws Exception {
         Document original = new Document();
         original.put("subDocument", new Document("_id", 1));
-        original.put("sub", new Document("sub", Arrays.asList(1, new Document("key", "value"), 3)));
+        original.put("sub", new Document("sub", List.of(1, new Document("key", "value"), 3)));
         original.put("null-value", null);
         original.put("set", new LinkedHashSet<>());
 
